--- a/style.css
+++ b/style.css
@@ -47,4 +47,13 @@
     background-color: #1f2937;
     height: 25%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
+
+#copy-text {
+    color: #e5e7eb;
+    font-size: 14px;
+
 }
