--- a/style.css
+++ b/style.css
@@ -44,13 +44,17 @@
 .copyright {
     position: absolute;
     bottom: 0;
-    color: #e5e7eb;
-    font-size: 14px;
-    background-color: #1f2937;
     height: 25%;
     width: 100%;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    font-size: 14px;
     display: flex;
     text-align: center;
     align-items: center;
+    justify-content: center;
+    color: #e5e7eb;
+    font-size: 14px;
+    
 }
 
